# bharadwaj-raju.github.io

./: .gitignore  404.html  README_wasm.md  config.toml  dark.css  index.html  index.json  index.xml  print.css  robots.txt  search_index.en.js  sitemap.xml  style.css  syntax-theme-dark.css  syntax-theme-light.css
.github/workflows/: main.yml
archives/: index.html
assets/css/: stylesheet.17087a98d603743fd74dd3a1d67af0400762fd53150d183658978d8ccd20b81e.css  stylesheet.6dc70b023afe0926492e906c86101dd806c2dc0ed5b00deaba4f66496b6bbf5c.css  stylesheet.8a3f04de6d672a7f5df3f9b996a45a4aee02691829f492bf70eac4cfb2977e3b.css
assets/js/: search.d75dc518e58581e7cdc3d48948870d173d6069155868d3814b4369188ad358d6.js
categories/: index.html  index.xml
content/posts/: _index.md
css/: papermodsquare-dark.css
js/: alpine.js  colorscheme.js  scrollsync.js
page/1/: index.html
posts/: index.html  index.xml
posts/angled-random-walk-mountains/: index.html
posts/kernel-mentorship/: index.html
posts/nothing-ear-2-on-linux/: index.html
posts/stacked-sines/: index.html
posts/stacked-sines/demo-wasm/: Cargo.toml
posts/stacked-sines/demo-wasm/pkg/: demo_wasm.d.ts  demo_wasm.js  demo_wasm_bg.wasm.d.ts
posts/writing-an-emulator-and-assembler-for-a-fictional-console/: index.html
sass/: dark.scss  print.scss  style.scss
search/: index.html
static/: giallo.css  syntax-theme-light.css
tags/: index.html  index.xml
templates/: base.html  blog-page.html  blog.html  index.html  postcard.html
themes/: rose-pine.tmTheme.template  rosepine.py  rosepine.tmTheme
(+22 files in other folders)
